# api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: config.rs  db.rs  error.rs  main.rs  models.rs  routes.rs  tests.rs
src/handlers/: auth.rs  deadman.rs  health.rs  mod.rs  subscription.rs  sync.rs
src/middleware/: auth.rs
