[package]
name = "saladvault-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
actix-web = "4"
actix-rt = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
hex = "0.4"
sha1 = "0.10"
aes-gcm = "0.10"
data-encoding = "2"
